# scope_exit

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  conanfile.txt  scope_exit.code-workspace
cmake/: FindScopeGuard.cmake  cxx_module.cmake  generate_clangd.cmake  module_std.cmake  scope_exitConfig.cmake
include/: ScopeGuard.hpp
include/ScopeGuard/: ScopeGuard.hpp  compiler_detection.h  has_include.hpp  marco.h  marco.hpp
scope_exit/: CMakeLists.txt  deleter.hpp  local_function.hpp  ref.hpp  scope_exit.h  scope_exit.hpp
scope_exit/src/: deleter.ixx  deleter_impl.hpp  marco.h  ref.ixx  ref_impl.hpp  scope_exit.base.ixx  scope_exit.h  scope_exit.hpp  scope_exit.ixx  scope_exit_base_impl.hpp  scope_exit_impl.hpp  scope_exit_inc.hpp  unique.h
src/: main.cpp  main_decl.hpp  main_header.cpp  main_impl.hpp  test.cpp
